Make it better 😎

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,6 +22,8 @@ jobs:
           node-version: 12
       - run: npm install
       - run: npm run production
+      - run: rm -rf .git
+      - run: rm -rf .github
       - run: 'echo "$SSH_KEY" > key'
         shell: bash
         env:
