--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,3 +34,5 @@ jobs:
       - run: sudo chmod 700 ./key
       - name: Deploy to hostinger
         run: rsync -rav -e "ssh -i ./key -p ${{ secrets.REMOTE_PORT }} -oStrictHostKeyChecking=no" --progress --exclude={"node_modules","key"} . ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.TARGET }}
+      - name: 'Run migrations'
+        run: ssh -i ./key -p ${{ secrets.REMOTE_PORT }} ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} php ${{ secrets.TARGET }}artisan migrate --force
